Stereo 3D Camera not displaying correctly #73187

Closed
opened 2020-01-17 12:05:08 +01:00 by ChristopherAnderssarian · 7 comments

System Information
Operating system: Windows 7
GPU: Radeon Vega 64, Divider version: 19.12.2
CPU: Intel Core i7-5960X

Blender Version

Working: blender-2.79b-f4dc9f9d68b-windows64 (official release)
Working: blender-2.80-f6cb5f54494e-windows64 (official release)
Working: blender-2.81-26bd5ebd42-windows64 (official release)
Broken: blender-2.82-fa5e28ab08c7-windows64 (build bot)

Short description of error

When enabling Stereoscopy the camera doesn't display correctly.

2.80

2.80.png

2.82

2.82.png

Exact steps for others to reproduce the error

3D_Camera.blend

Exact steps for others to reproduce the error from scratch

Enable Stereo 3D in output properties.

**System Information** Operating system: Windows 7 GPU: Radeon Vega 64, Divider version: 19.12.2 CPU: Intel Core i7-5960X **Blender Version** Working: `blender-2.79b-f4dc9f9d68b-windows64` (official release) Working: `blender-2.80-f6cb5f54494e-windows64` (official release) Working: `blender-2.81-26bd5ebd42-windows64` (official release) Broken: `blender-2.82-fa5e28ab08c7-windows64` (build bot) **Short description of error** When enabling Stereoscopy the camera doesn't display correctly. 2.80 ![2.80.png](https://archive.blender.org/developer/F8282924/2.80.png) 2.82 ![2.82.png](https://archive.blender.org/developer/F8282925/2.82.png) **Exact steps for others to reproduce the error** [3D_Camera.blend](https://archive.blender.org/developer/F8282931/3D_Camera.blend) **Exact steps for others to reproduce the error from scratch** Enable Stereo 3D in output properties.

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm, the 'pyramid' lines from the camera viewpoint to the frame outline are missing when Stereoscopy is enabled.

I can confirm, the 'pyramid' lines from the camera viewpoint to the frame outline are missing when Stereoscopy is enabled.

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker
Clément Foucault self-assigned this 2020-01-20 12:25:45 +01:00

This issue was referenced by 3bda3a2992

This issue was referenced by 3bda3a2992f46126ede1bbc6c3babdad4c154970

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73187
No description provided.