Fix T73187 Overlay: Stereo 3D Camera not displaying correctly